# controllers/order.controller.js
@@ -13,12 +13,12 @@ const createNewOrder = async (req, res, next) => {
     const orderItemsId = orderItems.map((orderItem) => orderItem.product);
     if (orderItems && orderItems.length === 0) {
         res.status(400);
-        throw new Error("No order items");
+        throw new Error("Đơn hàng không có sản phẩm nào!");
     }
     const cart = await Cart.findOne({ user: req.user._id });
     if (!cart) {
         res.status(404);
-        throw new Error("Cart not found");
+        throw new Error("Giỏ hàng không tồn tại!");
     }
     const session = await mongoose.startSession();
     const transactionOptions = {
@@ -47,7 +47,7 @@ const createNewOrder = async (req, res, next) => {
                 if (!orderedProduct) {
                     await session.abortTransaction();
                     res.status(400);
-                    throw new Error("One or more product order quantity exceed available quantity");
+                    throw new Error("Đơn hàng có sản phẩm đã vượt số lượng sản phẩm trong kho!");
                 }
                 /* let cartItemIndex = cart.cartItems.findIndex(
                         (cartItem) => cartItem.product.toString() == orderItem.product.toString()
@@ -63,7 +63,7 @@ const createNewOrder = async (req, res, next) => {
             if (!updatedCart) {
                 await session.abortTransaction();
                 res.status(500);
-                throw new Error("Removing ordered items from cart failed");
+                throw new Error("Xóa sản phẩm trong giỏ hàng không thành công!");
             }
             const createdOrder = await order.save();
             res.status(201);
@@ -78,13 +78,25 @@ const createNewOrder = async (req, res, next) => {
 
 //Get order
 const getOrderAdmin = async (req, res) => {
-    const dateOrderFilter = validateConstants(orderQueryParams, "date", req.query.dateOrder);
+    let page = Number(req.query.page) || 1;
+    const limit = Number(req.query.limit) || 20;
+    const keyword = req.query.keyword || "";
+
     const statusFilter = validateConstants(orderQueryParams, "status", req.query.status);
+    const count = await Order.countDocuments({ ...statusFilter });
+    if (count == 0) {
+        res.status(204);
+        throw new Error("Không có đơn hàng nào!");
+    }
+    const pages = Math.ceil(count / limit);
+    page = page <= pages ? page : 1;
     const orders = await Order.find({ ...statusFilter })
-        .sort({ ...dateOrderFilter })
+        .limit(limit)
+        .skip(limit * (page - 1))
+        .sort({ createdAt: "desc" })
         .populate("user", "-password");
     res.status(200);
-    res.json(orders);
+    res.json({ orders, page, pages, total: count });
 };
 
 /**
@@ -122,9 +134,8 @@ const getOrderAdmin = async (req, res) => {
  * Read: USER LOGIN ORDERS
  */
 const getOrder = async (req, res) => {
-    const dateOrderFilter = validateConstants(orderQueryParams, "date", req.query.dateOrder);
-    const orders = await Order.find({ user: req.user._id, isDisabled: false })
-        .sort({ ...dateOrderFilter })
+    const orders = await Order.find({ user: req.params.user, isDisabled: false })
+        .sort({ createdAt: "desc" })
         .populate("user", "-password");
     res.json(orders);
 };
@@ -137,7 +148,7 @@ const getDetailOrderById = async (req, res) => {
     const order = await Order.findOne({ _id: orderId, isDisabled: false }).populate("user", "-password");
     if (!order) {
         res.status(404);
-        throw new Error("Order Not Found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     res.status(200);
     res.json(order);
@@ -151,7 +162,7 @@ const orderPayment = async (req, res) => {
     const order = await Order.findOne({ _id: orderId, isDisabled: false });
     if (!order) {
         res.status(404);
-        throw new Error("Order Not Found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     order.isPaid = true;
     order.paidAt = Date.now();
@@ -167,7 +178,7 @@ const confirmDelivered = async (req, res) => {
     const order = await Order.findOne({ _id: orderId, isDisabled: false });
     if (!order) {
         res.status(404);
-        throw new Error("Order Not Found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     order.delivered = true;
     order.deliveredAt = Date.now();
@@ -184,7 +195,7 @@ const confirmOrder = async (req, res) => {
     const order = await Order.findOne({ _id: orderId, isDisabled: false });
     if (!order) {
         res.status(404);
-        throw new Error("Order Not Found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     order.confirmed = true;
     const updateOrder = await order.save();
@@ -200,7 +211,7 @@ const cancelOrderAdmin = async (req, res) => {
     const order = await Order.findOne({ _id: orderId, isDisabled: false });
     if (!order) {
         res.status(404);
-        throw new Error("Order Not Found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     order.cancelled = true;
     const updateOrder = await order.save();
@@ -213,11 +224,11 @@ const cancelOrderAdmin = async (req, res) => {
  */
 const cancelOrderUser = async (req, res) => {
     const orderId = req.params.id || null;
-    const user = req.body.user || null;
-    const order = await Order.findOne({ _id: orderId, user: user._id, isDisabled: false });
+    const userId = req.user._id || null;
+    const order = await Order.findOne({ _id: orderId, user: userId, isDisabled: false });
     if (!order) {
         res.status(404);
-        throw new Error("Order Not Found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     order.cancelled = true;
     const updateOrder = await order.save();
@@ -233,7 +244,7 @@ const Received = async (req, res) => {
     const order = await Order.findOne({ _id: orderId, isDisabled: false });
     if (!order) {
         res.status(404);
-        throw new Error("Order Not Found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     order.received = true;
     const updateOrder = await order.save();
@@ -245,12 +256,12 @@ const disableOrder = async (req, res) => {
     const order = await Order.findById(req.params.id);
     if (!order) {
         res.status(404);
-        throw new Error("Order not found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     order.isDisabled = true;
     await order.save();
     res.status(200);
-    res.json({ message: "Order has been disabled" });
+    res.json({ message: "Đơn hàng đã bị vô hiệu hóa!" });
 };
 
 //Admin restore disabled order
@@ -259,7 +270,7 @@ const restoreOrder = async (req, res) => {
     const order = await Order.findOne({ _id: orderId, isDisabled: true });
     if (!order) {
         res.status(404);
-        throw new Error("Order not found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     order.isDisabled = save;
     const updateOrder = await order.save();
@@ -272,11 +283,11 @@ const deleteOrder = async (req, res) => {
     const order = await Order.findById(req.params.id);
     if (!order) {
         res.status(404);
-        throw new Error("Order not found");
+        throw new Error("Đơn hàng không tồn tại!");
     }
     await order.remove();
     res.status(200);
-    res.json({ message: "Order has been deleted" });
+    res.json({ message: "Đơn hàng đã được xóa!" });
 };
 
 const OrderController = {
